--- a/index.html
+++ b/index.html
@@ -680,6 +680,24 @@ outline: 0;
 <div align="center">
 <h4 id="httpswww.twitch.tvthinkr_fr">🔗 <a href="https://www.twitch.tv/thinkr_fr" class="uri">https://www.twitch.tv/thinkr_fr</a> 🔗</h4>
 </div>
+<!--<div id="twitch-embed"></div>
+
+<script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+<script type="text/javascript">
+  var embed = new Twitch.Embed("twitch-embed", {
+    width: 854,
+    height: 480,
+    channel: "thinkr_fr",
+    layout: "video",
+    autoplay: false
+  });
+
+  embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
+    var player = embed.getPlayer();
+    player.play();
+  });
+</script>-->
 </div>
 <div id="upcoming-streams" class="section level2">
 <h2>Upcoming Stream(s)</h2>
@@ -739,6 +757,10 @@ Find us on the web:
 <a href="contact@thinkr.fr"> <i class="fa fa-envelope fa-3x"></i> </a>
 </li>
 </ul>
+</div>
+<hr>
+<div>
+<p>Website built on top of <a href="https://milligram.io/">milligram.css</a>.</p>
 </div>
 </div>
 
