--- a/index.html
+++ b/index.html
@@ -701,6 +701,38 @@ outline: 0;
 </div>
 <div id="upcoming-streams" class="section level2">
 <h2>Upcoming Stream(s)</h2>
+<div id="nd-live-stream" class="section level3">
+<h3>2nd live stream</h3>
+<li>
+👨‍💻 Colin Fay, <a href="https://twitter.com/_ColinFay"><span class="citation">@_ColinFay</span></a>
+</li>
+<li>
+🔗 <a href="https://www.twitch.tv/thinkr_fr" class="uri">https://www.twitch.tv/thinkr_fr</a>
+</li>
+<li>
+⏳ <strong>2020-01-23 21.00 Paris Time</strong>.
+</li>
+<details closed>
+<p><summary> <span title="Click to Expand"> See Event in Other Timezones </span> </summary></p>
+<pre class="r"><code>
+$UTC
+[1] &quot;2020-01-23 20:00:00 UTC&quot;
+
+$`America/New_York`
+[1] &quot;2020-01-23 15:00:00 EST&quot;
+
+$`America/Los_Angeles`
+[1] &quot;2020-01-23 12:00:00 PST&quot;
+
+$`Australia/Sydney`
+[1] &quot;2020-01-24 07:00:00 AEDT&quot;
+</code></pre>
+</details>
+<p><br></p>
+</div>
+</div>
+<div id="past-streams" class="section level2">
+<h2>Past Stream(s)</h2>
 <div id="first-live-stream" class="section level3">
 <h3>First live stream 🎂</h3>
 <li>
@@ -712,23 +744,6 @@ outline: 0;
 <li>
 ⏳ <strong>2020-01-13 21.00 Paris Time</strong>.
 </li>
-<details closed>
-<p><summary> <span title="Click to Expand"> See Event in Other Timezones </span> </summary></p>
-<pre class="r"><code>
-$UTC
-[1] &quot;2020-01-13 20:00:00 UTC&quot;
-
-$`America/New_York`
-[1] &quot;2020-01-13 15:00:00 EST&quot;
-
-$`America/Los_Angeles`
-[1] &quot;2020-01-13 12:00:00 PST&quot;
-
-$`Australia/Sydney`
-[1] &quot;2020-01-14 07:00:00 AEDT&quot;
-</code></pre>
-</details>
-<p><br></p>
 </div>
 </div>
 <div id="golem" class="section level2">
