--- a/index.html
+++ b/index.html
@@ -712,23 +712,13 @@ outline: 0;
 <li>
 ⏳ <strong>2020-01-23 21.00 Paris Time</strong>.
 </li>
-<details closed>
-<p><summary> <span title="Click to Expand"> See Event in Other Timezones </span> </summary></p>
-<pre class="r"><code>
-$UTC
-[1] &quot;2020-01-23 20:00:00 UTC&quot;
-
-$`America/New_York`
-[1] &quot;2020-01-23 15:00:00 EST&quot;
-
-$`America/Los_Angeles`
-[1] &quot;2020-01-23 12:00:00 PST&quot;
-
-$`Australia/Sydney`
-[1] &quot;2020-01-24 07:00:00 AEDT&quot;
-</code></pre>
-</details>
-<p><br></p>
+<p><b>In your timezone:</b></p>
+<li>
+<a href="https://www.timeanddate.com/worldclock/converter.html?iso=20200123T200000&amp;p1=195" target="_blank">With timeanddate.com</a>
+</li>
+<li>
+<a href="https://everytimezone.com/s/50386e35" target="_blank">With everytimezone.com</a>
+</li>
 </div>
 </div>
 <div id="past-streams" class="section level2">
